# raymetronome

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  notes.docx  run.ps1
src/: app.h  main.cpp
